<resources>
    <string name="app_name">装维助手</string>
    <string name="prompt_username">请输入用户名</string>
    <string name="prompt_password">请输入密码</string>
    <string name="prompt_jobnumber">请输入工号</string>
    <string name="prompt_unit">请选择单位</string>
    <string name="login">登 陆</string>
    <string name="main_title">华数宽带装维助手</string>
    <string name="main_title4test">宽带装维助手</string>
    <string name="setting">平台设置</string>
    <string name="settingOTT">配置盒子</string>
    <string name="questionTest">排障测试</string>
    <string name="openTest">开通测试</string>
    <string name="manualTest">手动测试</string>
    <string name="networkTest">宽带抓包</string>
    <string name="userInfo">装维信息</string>
    <string name="testRecode">测试记录</string>
    <string name="ok">确定</string>
    <string name="cancel">取消</string>
    <string name="custom">自定义</string>
    <string name="sure">确 定</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="ott_setting_revise_connect">修改连接设置</string>
    <string name="ott_setting_pppoe">PPPoe</string>
    <string name="ott_setting_reset">恢复出厂设置</string>
    <string name="ott_setting_restart">重启盒子</string>
    <string name="ott_setting_device_info">设备信息</string>
    <string name="wifi_disconnect">盒子未连接，请检查网络设置</string>
    <string name="wifi_disconnect_set1"><![CDATA[进入 设置 -->WIFI,选择 vixtel]]></string>
    <string name="wifi_disconnect_set2">等待Wifi连接成功</string>
    <string name="wifi_disconnect_set3">回到APP，即可完成与盒子的联网</string>
    <string name="wifi_disconnect_setting">看懂了，去设置</string>
    <string name="wifi_disconnect_tip">当前未连接盒子热点或未能联网，请通过上方提示入口，连接盒子热点</string>
    <string name="wifi_disconnect_tip1">当前未连接盒子热点，请通过上方提示入口，连接盒子热点</string>
    <string name="ott_setting_device_cpu">CPU使用率</string>
    <string name="ott_setting_device_harddisk">磁盘使用率</string>
    <string name="ott_setting_device_memory">内存使用率</string>
    <string name="ott_setting_device_seq">设备序列号</string>
    <string name="ott_setting_dhcp">DHCP</string>
    <string name="ott_setting_reset_info">是否确认恢复出厂设置</string>
    <string name="ott_setting_restart_info">是否确认重启盒子</string>
    <string name="ott_setting_static">设置静态Ip</string>
    <string name="ott_connect_info">盒子连接配置</string>
    <string name="account_null">请先设置宽带账号</string>
    <string name="wo_number_null">请先设置工单号</string>
    <string name="stop_test">停止监测</string>
    <string name="test_result">测试结果</string>
    <string name="test_stoped">测试被中断</string>
    <string name="begin_test">开始监测</string>
    <string name="device_this_testing">本设备测试中</string>
    <string name="device_other_testing">其他设备测试中</string>
    <string name="device_this_test_complete">本设备测试结果</string>
    <string name="device_other_test_complete">其他设备测试结果</string>
    <string name="device_this_test_stop">本设备测试停止</string>
    <string name="device_other_test_stop">其他设备测试停止</string>
    <string name="test_failed">测试失败</string>
    <string name="test_complete">测试完成</string>
    <string name="ott_setting_connect_pppoe_user">用户名</string>
    <string name="ott_setting_connect_pppoe_pwd">密码</string>
    <string name="ott_setting_connect_static_ip">IP地址</string>
    <string name="ott_setting_connect_static_subnet">子网掩码</string>
    <string name="ott_setting_connect_static_gate">网关</string>
    <string name="ott_setting_connect_static_dns">DNS</string>
    <string name="start_test">开始测试</string>
    <string name="start_capture">开始抓包</string>
    <string name="upload_captrue_file">上传至平台</string>
    <string name="captrue_file_title">宽带抓包</string>
    <string name="video_file_title">互动抓包</string>
    <string name="stop_capture">停止抓包</string>
    <string name="delete_captrue_file">一键删除</string>
    <string name="logout">退出登录</string>
    <string name="videoTest">互动抓包</string>
    <string name="wifi_disconnect_4upgrade">当前未连接盒子热点，无法升级固件</string>
    <string name="url_null">请先设置URL</string>
    <string name="cannot_get_box_version">获取盒子版本号失败！</string>
    <string name="cannot_get_server_version">无法获取最新版本号！</string>
    <string name="ott_setting_device_ipAddress">IP地址</string>
    <string name="ott_setting_device_subNetMask">掩码</string>
    <string name="ott_setting_device_gateway">网关</string>
    <string name="STB_null">请先设置STB ID</string>
    <string name="not_bridge">请先设为桥接模式</string>
    <string name="ott_setting_ssid">修改盒子wifi名称</string>
    <string name="network_disconnect_tip">盒子未联网</string>
    <string name="WO_SUBMIT_SUCCESS">工单已提交</string>
    <string name="WO_SUBMIT_FAIL">提交失败！请重新测试并提交</string>
    <string name="ott_setting_app_version">App版本号</string>

</resources>
