<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical">

    <include
        android:id="@id/title_bar"
        layout="@layout/app_action_bar_layout"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/magin_big"
        android:src="@mipmap/img3" />

    <LinearLayout
        android:id="@id/capture_file"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:visibility="gone">

        <TextView
            android:id="@id/capture_time"
            android:layout_width="0.0dip"
            android:layout_height="wrap_content"
            android:layout_weight="1.0"
            android:gravity="center" />

        <TextView
            android:id="@id/capture_size"
            android:layout_width="0.0dip"
            android:layout_height="wrap_content"
            android:layout_weight="1.0"
            android:gravity="center"
            android:visibility="gone" />
    </LinearLayout>

    <TextView
        android:id="@id/capture_name"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:visibility="gone" />

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="@dimen/magin_middle">

        <Switch
            android:id="@id/switch_reset_connection"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/magin_big"
            android:layout_weight="1.0"
            android:text="抓包时重新连接网络"
            android:textColor="@color/blue"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@id/start_capture"
            android:layout_width="0.0dip"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/magin_big"
            android:layout_weight="1.0"
            android:background="@color/btn_green"
            android:text="@string/start_capture"
            android:textColor="@color/white"
            android:textSize="@dimen/font_middle" />

        <Button
            android:id="@id/upload_capture"
            style="@style/button"
            android:layout_width="0.0dip"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/magin_big"
            android:layout_weight="1.0"
            android:background="@color/btn_green"
            android:text="@string/upload_captrue_file"
            android:textColor="@color/white"
            android:textSize="@dimen/font_middle"/>
        <Button
            android:id="@id/delete_captrue_file"
            style="@style/button"
            android:layout_width="0.0dip"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/magin_big"
            android:layout_weight="1.0"
            android:background="@color/btn_green"
            android:text="@string/delete_captrue_file"
            android:textColor="@color/white"
            android:textSize="@dimen/font_middle"/>
    </LinearLayout>
    <LinearLayout android:padding="@dimen/magin_middle" android:layout_width="fill_parent" android:layout_height="wrap_content">
        <TextView android:layout_width="0.0dip" android:layout_height="wrap_content" android:layout_marginLeft="50.0dip" android:text="文件名称" android:layout_weight="1.0" />
        <TextView android:gravity="center_vertical" android:layout_width="wrap_content" android:layout_height="fill_parent" android:layout_marginLeft="@dimen/magin_bigger" android:text="文件大小" />
        <TextView android:textColor="@color/blue" android:gravity="center_vertical" android:id="@id/network_selector_all" android:layout_width="wrap_content" android:layout_height="fill_parent" android:layout_marginLeft="@dimen/magin_middle" android:text="全选" />
    </LinearLayout>
    <ListView android:id="@id/network_list" android:layout_width="fill_parent" android:layout_height="0.0dip" android:layout_weight="1.0" />
</LinearLayout>
